Adicionada a opção de excluir a conta.

--- a/main_app/templates/edit-profile.html
+++ b/main_app/templates/edit-profile.html
@@ -96,6 +96,7 @@
 		<hr>
 		<p>Seu email: {{ user.email }}</p>
 		<p><a href="/reset-password">Clique aqui</a> para alterar sua senha.</p>
+		<p><a href="/delete-account">Clique aqui</a> para excluir sua conta.</p>
 		{% endif %}
 
 	</main></body>
