--- a/main_app/templates/delete-account.html
+++ b/main_app/templates/delete-account.html
@@ -14,6 +14,12 @@
 				width: 50%;
 				margin: auto;
 			}
+			
+			@media (min-width: 320px) and (max-width: 480px) {
+				body {
+					width: 90%;
+				}
+			}
 		</style>
 	</head>
 	<body>
