--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -7,6 +7,12 @@
 <title>Asker | Página inicial</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<style id="wait">
+	body {
+		visibility: hidden;
+		opacity: 0;
+	}
+</style>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
 <script src="/static/js/cookieman.js?v=1"></script>
 <script>
@@ -18,6 +24,8 @@
 	link.type = 'text/css';
 	link.href = '/static/css/' + cssfn + cssversion;
 	document.head.appendChild(link);
+
+	document.getElementById('wait').remove();
 </script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
