--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -6,6 +6,12 @@
 		<title>{{user_p.user.username}}</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<style id="wait">
+			body {
+				visibility: hidden;
+				opacity: 0;
+			}
+		</style>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Raleway:400,500,500i,700,800i" rel="stylesheet">
 		<script src="/static/js/cookieman.js?v=1"></script>
@@ -18,6 +24,8 @@
 			link.type = 'text/css';
 			link.href = '/static/css/' + cssfn + cssversion;
 			document.head.appendChild(link);
+
+			document.getElementById('wait').remove();
 		</script>
 		<script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
