--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -5,6 +5,12 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<style id="wait">
+			body {
+				visibility: hidden;
+				opacity: 0;
+			}
+		</style>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
 		<script src="/static/js/cookieman.js?v=1"></script>
 		<script>
@@ -16,6 +22,8 @@
 			link.type = 'text/css';
 			link.href = '/static/css/' + cssfn + cssversion;
 			document.head.appendChild(link);
+
+			document.getElementById('wait').remove();
 		</script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js"></script>
