--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -62,6 +62,7 @@ $(function() {
 		document.getElementById('edit-response-form').style.display = 'none'
 	});
 });
+function delete_response(response_button_dom_el,response_id){if(confirm('Opa! Você tem certeza que deseja apagar sua resposta?')){$.ajax({url:'/delete_response',data:{response_id:response_id,},complete:function() {response_button_dom_el.parentElement.parentElement.parentElement.parentElement.remove();}})}}
 		</script>
 	</head>
 	<body>
@@ -225,7 +226,7 @@ $(function() {
 			</div>
 			{% endfor %}
 		</div>
-<script src="/static/js/question.js?v=8"></script>
+<script src="/static/js/question.js?v=9"></script>
 <script>
 var formbgcolor='bg-white'; var bgcolor='bg-white'; var textcolor='text-dark';
 var commentformbgcolor='bg-white'; var commentbgcolor='bg-light';
