remoção de ban por IP (bugou) e adição de regras do Asker.

--- a/main_app/templates/includes/navbar.html
+++ b/main_app/templates/includes/navbar.html
@@ -25,6 +25,9 @@
                 <a class="nav-link" href="/rank"><i class="fas fa-trophy"></i> rank</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="/rules"><i class="fas fa-pen-square"></i> convivência</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="/logout"><i class="fas fa-external-link-alt"></i> sair</a>
             </li>
             {% else %}
