--- a/main_app/templates/base/recent-questions-pjax.html
+++ b/main_app/templates/base/recent-questions-pjax.html
@@ -4,9 +4,13 @@
 	{% for question in questions %}
 	<li class="list-group-item bg-main infinite-item">
 		<div class="card-body">
-			<a href="/question/{{ question.id }}">
-				<b>{{ question.text }}</b>
-			</a>
+
+      <a href="/question/{{ question.id }}" style="text-decoration: none">
+        <p>
+          {{ question.text }}
+        </p>
+      </a>
+
 			<p>
 				{% if question.description != '' %}
 				{{ question.description|cut_description|safe|linebreaksbr }}
