--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -59,10 +59,12 @@
             {{ question.text }}
           </p>
         </a>
-
-				<p>
-					{% if question.description != '' %}{{ question.description|cut_description|safe|linebreaksbr }}{% endif %}
-				</p>
+        
+					{% if question.description != '' %}
+            <p>
+              {{ question.description|cut_description|safe|linebreaksbr }}
+            </p>
+          {% endif %}
 				<small>{% total_answers question.id %} respostas <b>&middot; </b> <span class="text-muted"><img src="/static/images/white-heart.png?version=3" width="15px"> {{ question.total_likes }}</span></small>
 				{% if user.is_authenticated %}
 					{% answered user.username question.id as ANSWERED %}
