--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -62,7 +62,7 @@
 		<li class="list-group-item bg-main">
 			<div class="card-body">
 
-        <a href="/question/{{ question.id }}" style="text-decoration: none">
+        <a href="/question/{{ question.id }}">
           <p>
             {{ question.text }}
           </p>
