--- a/main_app/templates/base/recent-questions-pjax.html
+++ b/main_app/templates/base/recent-questions-pjax.html
@@ -5,7 +5,7 @@
 	<li class="list-group-item bg-main infinite-item">
 		<div class="card-body">
 
-      <a href="/question/{{ question.id }}" style="text-decoration: none">
+      <a href="/question/{{ question.id }}">
         <p>
           {{ question.text }}
         </p>
