--- a/main_app/templates/notification.html
+++ b/main_app/templates/notification.html
@@ -39,7 +39,7 @@
             	{% for notification in notifications %}
                 <li class="list-group-item bg-main">
 	                <div class="card-body">
-	                    <p class="ntime">{{ notification.creation_date|naturaltime }}</p>
+	                    <p title="{{ notification.creation_date }}" class="ntime">{{ notification.get_naturaltime }}</p>
 	                    <p class="ntext">{{ notification.text|safe }}</p>
                     </div>
                 </li>
