--- a/main_app/templates/includes/navbar.html
+++ b/main_app/templates/includes/navbar.html
@@ -19,7 +19,10 @@
                 <a class="nav-link" href="/ask"><i class="fas fa-question"></i> perguntar</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/notifications"><i class="far fa-bell"></i> notificações</a>
+                <a class="nav-link" href="/notifications">
+                  <i class="far fa-bell"><span id="notif-badge" class="badge badge-danger" style="display: none; border-radius: 50%; color: #dc3545; font-size: 25%;">0</span></i>
+                  notificações
+                </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/rank"><i class="fas fa-trophy"></i> rank</a>
@@ -41,3 +44,33 @@
         </ul>
     </div>
 </nav>
+
+{% if user.is_authenticated %}
+  <!-- Javascript para usuários autenticados (sistema de notificações) -->
+  <!-- Envia solicitação para o servidor a cada x segundos para testar se tem
+       novas notificações para o usuário. Se tem, mostra o badge de notificação
+       para o usuário. -->
+  <!-- Observação: precisa de jQuery para funcionar. -->
+  <script>
+    var get_notif = function() {
+      clearInterval(interval);
+      
+      /* Ajax para verificar se tem novas notificações */
+      /*$.ajax({
+        url: "/have-new-notif",
+        type: "get",
+        complete: function(data) {
+          result = data.responseText;
+          
+          if (result == "True") {
+            document.getElementById("notif-badge").style.display = "inline-block";
+          }
+        },
+      });*/
+      
+      interval = setInterval(get_notif, 10000);
+    };
+    
+    var interval = setInterval(get_notif, 0);
+  </script>
+{% endif %}
