--- a/main_app/templates/notification.html
+++ b/main_app/templates/notification.html
@@ -26,7 +26,7 @@
 			document.getElementById('wait').remove();
 		</script>
 		<script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
         <title>Suas Notificações</title>
@@ -35,9 +35,10 @@
     <body>
 		{% include "includes/navbar.html" %}
         <section class="card notifications bg-main">
+            <button class="btn btn-outline-primary" onclick="read_all()">Marcar todas como lidas</button>
             <ul class="list-group list-group-flush">
             	{% for notification in notifications %}
-                <li class="list-group-item bg-main">
+                <li class="list-group-item bg-main notif" style="background-color: {% if not notification.read %}#f7f7f7;{% endif %}">
 	                <div class="card-body">
 	                    <p class="ntime">{{ notification.creation_date|naturaltime }}</p>
 	                    <p class="ntext">{{ notification.text|safe }}</p>
@@ -60,5 +61,26 @@ if (getDarkCookie() == 'true') {
 	document.getElementsByClassName('navbar')[0].classList.remove("navbar-light");
 }
 		</script>
+    
+    <script>
+      /* Função para marcar todas as notificações como lidas. */
+      function read_all() {
+        notifications = document.getElementsByClassName("notif");
+        
+        for (let notif in notifications) {
+          
+          if (notifications[notif].style == undefined) {
+            continue;
+          }
+          
+          notifications[notif].style.backgroundColor = "white";
+        }
+        
+        $.ajax({
+          url: "/mark-notifications-as-viewed",
+          type: "get",
+        });
+      }
+    </script>
     </body>
 </html>
