--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -173,6 +173,32 @@ function delete_response(response_button_dom_el,response_id){if(confirm('Opa! Vo
 					{% endif %}
 				</div>
 			</div>
+{% if user.is_anonymous %}
+<!-- Ad -->
+<style>
+#ad {
+     width: 25%;
+}
+
+.ad1 {
+     border-style: solid;
+     border-width: 1px;
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+     #ad {
+         width: 25%;
+    }
+}
+</style>
+<a href="//thaudray.com/4/4172017">
+    <div class="ad1">
+        <small>&nbsp;precisa de um antivírus? clique aqui!</small>
+        <img id="ad" src="https://blog.elgscreen.com/wp-content/uploads/2018/12/antivirus-pago-vale-a-pena-750x410.jpg">
+    </div>
+</a>
+<!-- !Ad -->
+{% endif %}
 
 			<section class="card bg-main" id="responses">
   				<div class="card-header">
