--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -192,7 +192,7 @@ function delete_response(response_button_dom_el,response_id){if(confirm('Opa! Vo
 </style>
 <a href="//thaudray.com/4/4172017" id="ad_href" style="display: none;">
     <div class="ad1">
-        <small>&nbsp;precisa de um antivírus? clique aqui!</small>
+        <small>&nbsp;precisa de um antivírus?&nbsp;</small>
         <img id="ad" src="https://blog.elgscreen.com/wp-content/uploads/2018/12/antivirus-pago-vale-a-pena-750x410.jpg">
     </div>
 </a>
