--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -150,14 +150,15 @@
 		</style>
 
 		<center id="block-div">
-			<!--<button id="block-button" class="btn btn-outline-info" onclick="block_user()">{{ user.username|blocked:user_p.user.username }}</button>-->
 			<button id="block-button" class="btn btn-outline-info" onclick="block_user()">
-				{% ablockb user.username user_p.user.username as BLOCKED %}
-				{% if BLOCKED %}
-					Bloqueado
-				{% else %}
-					Bloquear
-				{% endif %}
+                {% if not user.is_anonymous %}
+                    {% ablockb user.username user_p.user.username as BLOCKED %}
+                    {% if BLOCKED %}
+                        Bloqueado
+                    {% else %}
+                        Bloquear
+                    {% endif %}
+                {% endif %}
 			</button>
 		</center>
 
