--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -34,28 +34,22 @@
 		<title>{{ question.text }} | Asker</title>
 		<script>
 $(function() {
+	/*
+	 * Quando o usuário envia uma resposta usando o formulário de enviar resposta
+	 * dessa página, a resposta é enviada via ajax. O servidor retorna de volta
+	 * o HTML da resposta renderizado preparado para ser inserido na página via JavaScript.
+	 */
 	$('#response-form').ajaxForm(function(data) {
-		answer_id = data['answer_id']
-
-		responses = document.getElementById('responses')
-
-		new_user_response = document.getElementById('response-form').text.value
-
-		new_innerHTML = '<li class="list-group-item"><div class="card-body"><div class="poster-container"><a class="poster-info" href="/user/{{ user.username }}"><div class="poster-profile-pic-container"><img class="poster-profile-pic-popover" width="45px" src="{{ user_p.avatar.url }}" alt="{{ user.username }}"></div><div class="poster-text-container"><div><span>{{ user.username }}</span></div></div></div></a><p>' + new_user_response + '</p></p>'
-
-		if (data['has_image']) {
-			url = data['image_url']
-			new_innerHTML += '<hr><img src="'+url+'" class="response-image" alt="Ocorreu um erro ao processar a imagem."><hr>'
-		}
-
-		new_innerHTML += '<div class="heart-comment" id="like-counter-'+answer_id+'" onclick="like(this, '+answer_id+')"><img width="20px" src="/static/images/white-heart.png?version=3" class="icon"> <span>0</span></div>&nbsp;&nbsp;                   <div class="dropdown btn-group dropup response-control" id="options-dropdown"><button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Opções</button>   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"><button class="dropdown-item" onclick="delete_response(this, '+answer_id+');">Apagar</button><button class="dropdown-item" onclick="document.getElementById(`edit-response-form`).style.display=`block`">Editar</button></div>   </div>                  <div class="heart-comment">&nbsp;<img width="20px" src="/static/images/comments.png?version=3" class="icon" onclick="show_comments(this.parentElement, '+answer_id+', this.parentElement.getElementsByTagName(`img`)[0], `{{ csrf_token }}`, `{{ user.username }}`, {{ question.id }})"> <span class="comment">0</span><div class="comments" id="1"></div></div>'
-		new_innerHTML += '<form id="edit-response-form" class="form-inline" method="post" action="/edit-response" onsubmit="document.getElementById(`response-'+answer_id+'`).innerHTML = this.response.value.replace(`\n`, `<br>`)">{% csrf_token %}<input type="hidden" name="response_id" value="'+answer_id+'"><textarea name="response" class="form-control">'+new_user_response+'</textarea><input class="btn btn-outline-primary" type="submit" value="Enviar"></form></li>'
-		responses.innerHTML += new_innerHTML
-
-		document.getElementById('response-form').remove()
-
-
-
+		responses = document.getElementsByClassName('responses')[0];
+		responses.innerHTML += data;
+		
+		/* Desativa o ícone de carregamento já que a resposta (teoricamente)
+		 * já foi carregada na página.
+		 */
+		document.getElementById('response-loading-gif').style.display = 'none';
+		
+		/* Oculta o formulário de responder a pergunta porque a pergunta já foi respondida. */
+		document.getElementById('response-form').style.display = 'none';
 	});
 
 	$('#edit-response-form').ajaxForm(function(answer_id) {
@@ -179,97 +173,9 @@ function delete_response(response_button_dom_el,response_id){if(confirm('Opa! Vo
   				<div class="card-header">
     				{{ question.total_responses }} respostas
   				</div>
-				<ul class="list-group list-group-flush">
+				<ul class="list-group list-group-flush responses">
 				{% for response in responses|pull_best_answer %}
-				<li class="list-group-item">
-					<div class="card-body">
-						<div class="poster-container">
-						<a class="poster-info" href="/user/{{ response.creator.user.username }}">
-							<div class="poster-profile-pic-container"><img class="poster-profile-pic-popover" width="40px" src="{{ response.creator.avatar.url }}" alt="{{ response.creator.user.username }}"></div>
-							<div class="poster-text-container"><div><span>{{ response.creator.user.username }}</span><br><span title="{{ response.pub_date }}" class="post-pub-date"> {{ response.get_naturaltime }}</span></div></div>
-						</a></div>
-                        {% if question.best_answer == response.id %}
-                            <div class="best-answer-badge"><span class="badge badge-pill badge-primary">🏆 Melhor resposta</span></div>
-                        {% endif %}
-						<p id="response-{{ response.id }}">{{ response.text|cut_description|safe|linebreaksbr }}</p>
-
-						{% if response.get_embedded_content %}
-							<div class="embedded-content">
-								{{ response.get_embedded_content|safe }}
-							</div>
-							<br>
-						{% endif %}
-
-						{% if response.image %}
-							<hr>
-							<img src="{{ response.image.url }}" class="response-image" alt="Ocorreu um erro ao processar a imagem.">
-							<hr>
-						{% endif %}
-
-						<div class="heart-comment" id="like-counter-{{ response.id }}" onclick="like(this, {{ response.id }})">
-							<img width="18px" src="/static/images/{{ response.id|like_or_not:user.username }}?version=3" class="icon">
-							<span>{{ response.total_likes }}</span>
-						</div>
-						&nbsp;&nbsp;
-
-						{% if response.creator.user.username == user.username %}
-						<div class="dropdown btn-group dropup response-control" id="options-dropdown">
-						  <button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							  Opções
-						  </button>
-						  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-							<button class="dropdown-item" onclick="delete_response(this, {{ response.id }})">Apagar</button>
-							<button class="dropdown-item" onclick="document.getElementById('edit-response-form').style.display='block'">Editar</button>
-						  </div>
-						</div>
-						{% elif question.creator.user.username == user.username %}
-							{% if question.may_choose_answer %}
-							<button class="btn btn-primary btn-sm response-control choose-answer-btn" type="button" onclick="chooseAnswer({{ response.id }})">
-							  	Definir melhor resposta
-							</button>
-							{% endif %}
-						{% endif %}
-
-
-						<div class="heart-comment">
-                            <script>
-                                var jaAbriu{{ response.id }} = false;
-                            </script>
-							<img width="18px" src="/static/images/comments.png?version=3" class="icon" onclick="show_comments(this.parentElement, {{ response.id }}, jaAbriu{{ response.id }}, `{{ user.username }}`); if(jaAbriu{{ response.id }} == false) {jaAbriu{{ response.id }} = true}">
-							<span class="comment">{{ response.id|total_comments }}</span>
-
-                            <!-- Comentários -->
-                            <div class="card comments" id="comments-response-{{ response.id }}">
-                                <ul class="comments-ul list-group list-group-flush">
-                                    
-                                </ul>
-                                
-                                <center>
-                                    <img src="/static/images/loading.gif" width="10%" class="comment-loader" style="display: none">
-                                </center>
-                                
-                                <form class="form-inline comm-form" onsubmit="make_comment(this); return false">
-                                    <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
-                                    <input type="hidden" name="response_id" value="{{ response.id }}">
-                                    <input type="hidden" name="question_id" value="{{ question.id }}">
-                                    <input type="text" maxlength="300" autocomplete="off" class="form-control comment-form" name="text" placeholder="Escreva seu comentário" required>
-                                    <input class="btn btn-primary" type="submit" value="Comentar">
-                                </form>
-                                
-                                
-                            </div>
-                            
-						</div>
-					{% if response.creator.user.username == user.username %}
-						<form id="edit-response-form" class="form-inline" method="post" action="/edit-response" onsubmit="document.getElementById('response-{{ response.id }}').innerHTML = this.response.value.replace('\n', '<br>')">
-							{% csrf_token %}
-							<input type="hidden" name="response_id" value="{{ response.id }}">
-							<textarea class="form-control edit-response-textarea" name="response">{{ response.text }}</textarea>
-							<input class="btn btn-outline-primary" type="submit" value="Enviar">
-						</form>
-						{% endif %}
-					</div>
-				</li>
+					{% include "base/response-content.html" %}
 				{% endfor %}
 				</ul>
 			</section>
