--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -34,6 +34,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/shortcuts/infinite.min.js"></script>
 
+
+<!-- Ad -->
+<meta name="hilltopads-site-verification" content="845ebaf177b26bf8551ff0a8c30f9088dbd0b241" />
 </head>
 
 	<body>
