--- a/main_app/templates/test.html
+++ b/main_app/templates/test.html
@@ -10,7 +10,16 @@
   <body>
     
     <!-- Ad -->
-    
+<script>
+(function(__htas){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = __htas || {};
+s.src = "\/\/apprefaculty.pro\/aeW.Z\/y\/QL2b9\/k\/ZCTw9q6_b\/2\/5ilpSUWQQ\/9KNSD\/Ig0\/MrjVcN4eM\/Sq0x0\/MbjPQeybNfzOgiyCJInPBv1Gc_2KhIaVbB2P5llpSSWoQe9ENGDvIN0\/MyjpcO4pMkSj0\/0_MYjDQkyRNeztgIyK";
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
     <!-- !Ad -->
     
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
